fix column overlap recompile css

--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body {
   background: url("images/background.jpg") repeat;
 }
 
-h2, h3 {
+h2,
+h3 {
   font-family: "Playfair Display", sans-serif;
   font-weight: bolder;
 }
@@ -34,7 +35,7 @@ section.intro h1 {
   text-transform: uppercase;
   font-family: "Cinzel Decorative", serif;
   font-size: 4em;
-  border-bottom: solid #756858 2px;
+  border-bottom: solid rgba(117, 104, 88, 0.5) 2px;
   margin-top: 0;
   grid-row: 1/2;
   grid-column: 2/7;
@@ -93,9 +94,7 @@ h3 {
 #zen-intro::after {
   content: "";
   display: block;
-  /* width: 100%; */
   height: 30em;
-  /* margin: 0 auto -26em; */
   margin: 2em 1em;
   background: url("images/paperman-large.jpg") no-repeat center;
 }
@@ -103,9 +102,7 @@ h3 {
 #zen-participation::after {
   content: "";
   display: block;
-  /* width: 100%; */
   height: 26em;
-  /* margin: 0 auto -26em; */
   margin: 2em 4em;
   background: url("images/clock-small.jpg") no-repeat center;
 }
@@ -115,11 +112,11 @@ h3 {
   color: #D4CAC4;
   padding: 10px;
   padding-top: 1px;
-  background-color: #0D1F2D;
+  background-color: rgba(13, 31, 45, 0.5);
 }
 
 #design-selection h3 {
-  background-color: #756858;
+  background-color: rgba(117, 104, 88, 0.5);
   padding: 1em;
   margin-bottom: -1em;
   text-align: center;
@@ -127,11 +124,11 @@ h3 {
 
 #design-selection ul {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
   text-decoration: none;
   list-style-type: none;
-  background-color: #0D1F2D;
+  background-color: rgba(13, 31, 45, 0.5);
   color: #D4CAC4;
   padding: 1em;
   column-gap: 2em;
@@ -146,11 +143,11 @@ h3 {
   grid-template-rows: 1fr 0.5em 1fr;
   grid-gap: 0.5em;
   background-color: #D4CAC4;
-  color: #0D1F2D;
+  color: rgba(13, 31, 45, 0.5);
   text-align: center;
 }
 #design-selection li a:nth-child(1) {
-  background-color: #A6988D;
+  background-color: rgba(166, 152, 141, 0.5);
   text-align: center;
 }
 
@@ -160,13 +157,13 @@ h3 {
 }
 
 #design-archives {
-  background-color: #0D1F2D;
+  background-color: rgba(13, 31, 45, 0.5);
   color: #D4CAC4;
   padding: 1em 0.5em;
   margin-top: -1em;
 }
 #design-archives h3 {
-  background-color: #A6988D;
+  background-color: rgba(166, 152, 141, 0.5);
   color: black;
   padding: 0.5em;
   text-align: center;
@@ -189,9 +186,7 @@ h3 {
 #zen-resources::before {
   content: "";
   display: block;
-  /* width: 100%; */
   height: 26em;
-  /* margin: 0 auto -26em; */
   margin: 1em 1em;
   background: url("images/carman-small.jpg") no-repeat center;
 }
@@ -213,23 +208,28 @@ h3 {
 }
 
 .extra1 {
-  background-image: url(images/local_7.svg);
+  background-image: url("images/local_7.svg");
   height: 20px;
   background-repeat: repeat;
   background-position: center;
-  margin-bottom: 20px;
+  margin: -40px 0px 70px 0px;
 }
 
+@media only screen and (max-width: 600px) {
+  p, h3 {
+    padding: 0.5em;
+  }
+}
 @media only screen and (min-width: 600px) {
   .page-wrapper {
     display: grid;
-    grid-template-rows: repeat(3, auto);
+    grid-template-rows: auto auto auto;
   }
 
   #zen-intro {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(4, auto);
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto auto;
     row-gap: 0;
     padding: 2em 3em;
     grid-row: 1/2;
@@ -260,8 +260,8 @@ h3 {
 
   #zen-supporting {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(3, auto);
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
     row-gap: 1.5em;
     padding: 2em 3em;
     grid-row: 3/4;
@@ -328,8 +328,8 @@ h3 {
 
   aside .wrapper {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(1, auto);
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
     grid-row: 2/3;
   }
 
@@ -338,7 +338,7 @@ h3 {
     grid-row: 1/2;
     margin: 0;
     padding: 0;
-    background-color: #0D1F2D;
+    background-color: rgba(13, 31, 45, 0.5);
   }
   #design-selection h3 {
     background-color: #756858;
@@ -365,7 +365,7 @@ h3 {
   #zen-resources {
     grid-column: 1/2;
     grid-row: 1/2;
-    background-color: #A6988D;
+    background-color: rgba(166, 152, 141, 0.5);
   }
 
   #zen-resources::before {
@@ -375,9 +375,7 @@ h3 {
   #zen-resources::after {
     content: "";
     display: block;
-    /* width: 100%; */
     height: 26em;
-    /* margin: 0 auto -26em; */
     margin: 1em 1em;
     background: url("images/typewriter-small.jpg") no-repeat center;
     grid-column: 1/2;
@@ -387,9 +385,7 @@ h3 {
   #design-archives::after {
     content: "";
     display: block;
-    /* width: 100%; */
     height: 26em;
-    /* margin: 0 auto -26em; */
     margin: 1em 1em;
     background: url("images/camera-large.jpg") no-repeat center;
     grid-column: 3/4;
@@ -399,6 +395,59 @@ h3 {
   #zen-explanation,
 #zen-benefits {
     background-color: transparent;
+  }
+}
+.page-wrapper {
+  background: url("images/background2.jpg") repeat;
+  box-shadow: 0 0 10rem black, 0 0 2rem black;
+  margin-top: 2rem;
+  margin-bottom: -4rem;
+  padding-bottom: 4rem;
+}
+
+#css-zen-garden {
+  background: url("images/wood-table-top.jpg") repeat;
+  max-width: 80rem;
+  margin: auto;
+}
+
+.extra1 {
+  margin-bottom: 5rem;
+}
+
+div#zen-preamble {
+  columns: auto 10rem;
+}
+
+#design-selection ul {
+  background: none;
+}
+
+#design-selection h3 {
+  background: none;
+  background-color: rgba(117, 104, 88, 0.5);
+}
+
+#design-archives h3 {
+  background: none;
+  background-color: rgba(117, 104, 88, 0.5);
+}
+
+@media only screen and (min-width: 1400px) {
+  #zen-preamble {
+    max-width: 600px;
+  }
+
+  #zen-explanation {
+    max-width: 700px;
+  }
+
+  #zen-requirements {
+    max-width: 700px;
+  }
+
+  #zen-participation {
+    max-width: 490px;
   }
 }
 
